MD Settings: fix help/ redirection to only happen on chrome://help

R=tommycli@chromium.org
BUG=735149

Review-Url: https://codereview.chromium.org/2949053004
Cr-Commit-Position: refs/heads/master@{#481981}

Former-commit-id: 25472e0c801c621e7bd907bbbc57b317efa56fa0